List of content changed.

--- a/CppTemplateTutorial.vcxproj
+++ b/CppTemplateTutorial.vcxproj
@@ -83,6 +83,9 @@
     <ClCompile Include="CppTemplateTutorial.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ReadMe.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
