--- a/CppTemplateTutorial.vcxproj.filters
+++ b/CppTemplateTutorial.vcxproj.filters
@@ -30,4 +30,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ReadMe.md" />
+  </ItemGroup>
 </Project>
